Renamed CheckIf to Preconditions Added Range Object and Tests Added isNotBlank method to StringUtils Fixed some Modular issues